[gd_scene load_steps=9 format=3 uid="uid://4sku6vb8audx"]

[ext_resource type="Theme" uid="uid://duu1dtcvn0xm5" path="res://assets/themes/my_theme.tres" id="1_7ya8j"]
[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_w6t0h"]
[ext_resource type="Texture2D" uid="uid://8eoyqyyqvyjp" path="res://assets/ui/key tutorial.png" id="3_wph4u"]
[ext_resource type="AudioStream" uid="uid://cnifoxg6nw4a2" path="res://audio/ui/pluck_002.ogg" id="4_efwy6"]
[ext_resource type="AudioStream" uid="uid://dpfgdpvykmo1h" path="res://audio/ui/pluck_001.ogg" id="5_5a4tn"]

[sub_resource type="Animation" id="Animation_ptwxq"]
resource_name = "play"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_md3xv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_38k5h"]
_data = {
"RESET": SubResource("Animation_md3xv"),
"play": SubResource("Animation_ptwxq")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w6t0h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 360.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0.494118)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_7ya8j")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 170)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/MarginContainer2"]
position = Vector2(124.1, 85.93)
scale = Vector2(0.94, 0.94)
texture = ExtResource("3_wph4u")
hframes = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
root_node = NodePath(".")
libraries = {
"": SubResource("AnimationLibrary_38k5h")
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(90, 30)
layout_mode = 2

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_7ya8j")
text = "Continue"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 30)
layout_mode = 2

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("1_7ya8j")
text = "Main Menu"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme = ExtResource("1_7ya8j")
text = "Quit"

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_efwy6")
volume_db = -10.0

[node name="ButtonHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5a4tn")
volume_db = -10.0

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Quit" to="." method="_on_quit_pressed"]
